@@ -32,6 +32,6 @@ Global
 		$4.LineAlign = 0
 		$3.inheritsSet = Mono
 		description = GTK user interface for comex-project
-		version = 0.1.5.1
+		version = 0.1.5.2
 	EndGlobalSection
 EndGlobal
