@@ -8,7 +8,7 @@
     <ProjectGuid>{8264E480-3956-4B26-9237-D63A0C856206}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>comexgtk</RootNamespace>
-    <ReleaseVersion>0.1.5.1</ReleaseVersion>
+    <ReleaseVersion>0.1.5.2</ReleaseVersion>
     <Description>GTK user interface for comex-project</Description>
     <AssemblyName>comex-gtk</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
