@@ -1,5 +1,10 @@
 2011-09-13  Armando Basile  <hmandevteam@gmail.com>
 
+	* comex-gtk.sln: - glade widgets init to null value (removed
+	warning on build on windows)
+
+2011-09-13  Armando Basile  <hmandevteam@gmail.com>
+
 	* comex-base.sln: - removed portname parameter in settings
 	file
 
